opam-version: "1.2"
name: "numalib"
maintainer: "Steve Bleazard <stevebleazard@googlemail.com>"
authors: "Steve Bleazard <stevebleazard@googlemail.com>"
homepage: "https://www.github.com/stevebleazard/ocaml-numa"
bug-reports: "https://github.com/stevebleazard/ocaml-numa/issues"
license: "MIT"
dev-repo: "https://github.com/stevebleazard/ocaml-numa"
doc: "https://stevebleazard.github.io/ocaml-numa/"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs "@install"]
]

depends: [
  "jbuilder" {build}
]

