opam-version: "1.2"
maintainer: "Steve Bleazard <stevebleazard@googlemail.com>"
authors: "Steve Bleazard <stevebleazard@googlemail.com>"
homepage: "https://www.github.com/stevebleazard/ocaml-numa"
bug-reports: "https://www.github.com/stevebleazard/ocaml-numa/issues"
license: "MIT"
dev-repo: "https://www.github.com/stevebleazard/ocaml-numa.git"
doc: "https://stevebleazard.github.io/ocaml-numa/"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs "@install"]
]

depends: [
  "jbuilder" {build}
  "core"     {>= "v0.9"}
  "async"    {>= "v0.9"}
]

depexts: [
  [["debian"] ["libnuma-dev"]]
  [["ubuntu"] ["libnuma-dev"]]
  [["centos"] ["numactl-libs" "numactl-devel"]]
  [["fedora"] ["numactl-libs" "numactl-devel"]]
  [["opensuse"] ["libnuma-devel"]]
]

available: [ ocaml-version >= "4.03.0" ]
descr: "
OCAML Interface to Linux NUMA API

Provides an OCaml API to the Linux Non-Uniform Memory Access library including
low level access to the C functions, a high level API and Async support
"
